...
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="title_activity_note_list" translatable="false">NoteListActivity</string>
    <string name="new_note" translatable="false">New note</string>
    <string name="send_as_email" translatable="false">Send as email</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
...
